--- a/pdv.html
+++ b/pdv.html
@@ -6,6 +6,7 @@
     <title>PDV Cafeteria</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         tailwind.config = {
             darkMode: 'class',
@@ -38,6 +39,9 @@
                 <button id="logoutBtn" class="bg-red-500 hover:bg-red-600 px-4 py-2 rounded">
                     <i class="fas fa-sign-out-alt mr-2"></i>Sair
                 </button>
+                <button href="relatorio.html" class="bg-green-500 hover:bg-green-600 px-4 py-2 rounded">
+                    <i class="fas fa-chart-line mr-2"></i>Relatório
+                </button>
             </div>
         </div>
     </nav>
@@ -57,9 +61,7 @@
             </div>
             
             <div id="mesasContainer" class="mt-8"></div>
-            <div id="historicoContainer" class="mt-8 hidden"></div>      
-                </button>
-            </div>
+            <div id="historicoContainer" class="mt-8 hidden"></div>
         </div>
 
         <div id="tabsList" class="flex space-x-2 mb-4 overflow-x-auto pb-2"></div>
@@ -67,26 +69,82 @@
         <div id="tabsContent" class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6"></div>
     </main>
     
-<!-- Modal de Catálogo de Produtos -->
-<div id="modal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
-    <div class="bg-white dark:bg-gray-800 rounded-lg p-8 max-w-4xl w-full max-h-[90vh] overflow-y-auto">
-        <div class="flex justify-between items-center mb-6">
-            <h2 class="text-2xl font-bold dark:text-white">Catálogo de Produtos</h2>
-            <button id="closeModal" class="text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-100">
-                <i class="fas fa-times text-xl"></i>
+    <!-- Modal de Relatório -->
+    <div id="modalRelatorio" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+        <div class="bg-white dark:bg-gray-800 rounded-lg p-8 max-w-4xl w-full max-h-[90vh] overflow-y-auto">
+            <div class="flex justify-between items-center mb-6">
+                <h2 class="text-2xl font-bold dark:text-white">Relatório de Vendas</h2>
+                <button id="closeModalRelatorio" class="text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-100">
+                    <i class="fas fa-times text-xl"></i>
+                </button>
+            </div>
+            <div class="mb-6 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+                <div>
+                    <label for="formaPagamento" class="block mb-2 dark:text-white">Forma de Pagamento</label>
+                    <select id="formaPagamento" class="w-full border rounded px-3 py-2 dark:bg-gray-700 dark:text-white dark:border-gray-600">
+                        <option value="">Todas</option>
+                        <option value="Cartão de Crédito">Cartão de Crédito</option>
+                        <option value="Dinheiro">Dinheiro</option>
+                        <option value="Pix">Pix</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="dataRelatorio" class="block mb-2 dark:text-white">Data</label>
+                    <input type="date" id="dataRelatorio" class="w-full border rounded px-3 py-2 dark:bg-gray-700 dark:text-white dark:border-gray-600">
+                </div>
+                <div>
+                    <label for="numeroMesa" class="block mb-2 dark:text-white">Número da Mesa</label>
+                    <input type="number" id="numeroMesa" placeholder="Número da Mesa" class="w-full border rounded px-3 py-2 dark:bg-gray-700 dark:text-white dark:border-gray-600">
+                </div>
+            </div>
+            <button id="filtrarRelatorio" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded mb-6">
+                <i class="fas fa-search mr-2"></i>Filtrar
             </button>
+
+            <div id="dashboardContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-6">
+                <!-- Exemplos de cartões de estatísticas -->
+                <div class="bg-gray-200 dark:bg-gray-700 p-4 rounded-lg shadow-md">
+                    <h3 class="text-lg font-semibold dark:text-white">Total de Vendas</h3>
+                    <p id="totalVendas" class="text-2xl font-bold mt-2 dark:text-white">R$ 0,00</p>
+                </div>
+                <div class="bg-gray-200 dark:bg-gray-700 p-4 rounded-lg shadow-md">
+                    <h3 class="text-lg font-semibold dark:text-white">Total de Mesas</h3>
+                    <p id="totalMesas" class="text-2xl font-bold mt-2 dark:text-white">0</p>
+                </div>
+                <div class="bg-gray-200 dark:bg-gray-700 p-4 rounded-lg shadow-md">
+                    <h3 class="text-lg font-semibold dark:text-white">Forma de Pagamento Mais Usada</h3>
+                    <p id="pagamentoMaisUsado" class="text-2xl font-bold mt-2 dark:text-white">N/A</p>
+                </div>
+                <!-- Outros cartões podem ser adicionados aqui -->
+            </div>
+
+            <div id="relatorioContent" class="mt-8">
+                <!-- Aqui será inserido o conteúdo do relatório -->
+                <canvas id="graficoRelatorio"></canvas>
+            </div>
         </div>
-        <div class="mb-6">
-            <select id="categoriaSelect" class="w-full border rounded px-3 py-2 dark:bg-gray-700 dark:text-white dark:border-gray-600">
-                <option value="Todas">Todas as Categorias</option>
-                <option value="Bebidas">Bebidas</option>
-                <option value="Doces">Doces</option>
-                <option value="Lanches">Lanches</option>
-            </select>
-        </div>
-        <div id="produtosContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
     </div>
-</div>
+
+    <!-- Modal de Catálogo de Produtos -->
+    <div id="modal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+        <div class="bg-white dark:bg-gray-800 rounded-lg p-8 max-w-4xl w-full max-h-[90vh] overflow-y-auto">
+            <div class="flex justify-between items-center mb-6">
+                <h2 class="text-2xl font-bold dark:text-white">Catálogo de Produtos</h2>
+                <button id="closeModal" class="text-gray-500 hover:text-gray-700 dark:text-gray-300 dark:hover:text-gray-100">
+                    <i class="fas fa-times text-xl"></i>
+                </button>
+            </div>
+            <div class="mb-6">
+                <select id="categoriaSelect" class="w-full border rounded px-3 py-2 dark:bg-gray-700 dark:text-white dark:border-gray-600">
+                    <option value="Todas">Todas as Categorias</option>
+                    <option value="Bebidas">Bebidas</option>
+                    <option value="Doces">Doces</option>
+                    <option value="Lanches">Lanches</option>
+                </select>
+            </div>
+            <div id="produtosContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+        </div>
+    </div>
 
     <!-- Modal de Pagamento -->
     <div id="modalPagamento" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center">
@@ -163,11 +221,45 @@
 
         // Adiciona o evento de clique ao botão de alternar tema
         document.getElementById('toggleTheme').addEventListener('click', toggleDarkMode);
+
+        // Lógica para abrir e fechar o modal de relatório
+        document.getElementById('relatorioBtn').addEventListener('click', () => {
+            document.getElementById('modalRelatorio').classList.remove('hidden');
+            // Inicializa o gráfico
+            const ctx = document.getElementById('graficoRelatorio').getContext('2d');
+            new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril'],
+                    datasets: [{
+                        label: 'Vendas',
+                        data: [12, 19, 3, 5],
+                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                        borderColor: 'rgba(75, 192, 192, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            });
+        });
+
+        document.getElementById('closeModalRelatorio').addEventListener('click', () => {
+            document.getElementById('modalRelatorio').classList.add('hidden');
+        });
+
+        // Lógica para aplicar os filtros no relatório
+        document.getElementById('filtrarRelatorio').addEventListener('click', () => {
+            // Aqui você pode implementar a lógica para filtrar os dados do relatório
+            // e atualizar o conteúdo no elemento com id "relatorioContent".
+        });
     </script>
 
     <script type="module" src="js/app.js"></script>
 </body>
 </html>
-
-
-<!-- hadouken -->
